--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         Simão
                     </h2>
                     <p>
-                        Pedro e seu irmão André são pescadores, mas como a profissão não tem dado muito retorno,
+                        Simão e seu irmão André são pescadores, mas como a profissão não tem dado muito retorno,
                         vivem atrás de maneiras jeitosas para aumentar a renda, mas sem muito sucesso. Simão chega a
                         fazer um acordo com o general romano para dedurar os judeus que estão trabalhando no sábado,
                         violando a lei de Moisés.
